Amarok ChangeLog
================
(C) 2002-2013 the Amarok authors.


VERSION 2.9-Beta 1
  FEATURES:
   * Wikipedia can now be also used over SSL.

  CHANGES:

  BUGFIXES:
   * Fixed performance problem with large podcast feeds.
     Patch by Frank Meerkoetter <frank@meerkoetter.org>. (BR 283022)
   * Fixed issue with Amarok sometimes not finding its plugins after an upgrade.
   * Album Artist / Compilation / Disc Number tags are now read correctly
     from APE tags. Patch by Bruno Léon <bruno.leon@nividic.org>. (BR 323735)
   * Using Shuffle keyboard shortcut no longer causes Amarok to crash.
     (BR 323614)
   * Check for QtBindings at runtime instead. Disable scripts and display error message
     if missing. (BR 325006)
   * Print playlist download errors to the debug log. (BR 325120)


VERSION 2.8
  FEATURES:
   * Tracks from Recently Played List widget can now directly be added to the
     playlist. (BR 279263, BR 296090)

  CHANGES:
   * The Jamendo service now uses a higher quality MP3 format instead of Ogg Vorbis.
   * Added an option whether adding tracks to playlist should start playing. (BR 322428)
   * Amarok now depends on Qt 4.8.3.
   * Amarok now uses FindFFMpeg.cmake from kdelibs

  BUGFIXES:
   * Don't reload Wikipedia applet content if artist/album have not changed. 
     Patch by Frank Meerkoetter <frank@meerkoetter.org>. (BR 112044)
   * Jamendo service: Albums are now downloaded directly instead of going via
     BitTorrent. This is far more reliable and also supports on-the-fly transcoding.
     (BR 299434)
   * Work-around Solid UDisks2 backend bug that caused USB Mass Storage devices and iPods
     not being recognized when connected before Amarok was started. Also fixes a bug where
     blank devices would appear in Play Media dialog. (BR 322980)
   * Definitely fix a bug where storing Last.fm credentials in plain-text isn't offered
     when KWallet is disabled. (BR 315306)