@@ -10,6 +10,7 @@ VERSION 2.9-Beta 1
   CHANGES:
 
   BUGFIXES:
+   * Fixed crashes with Intel drivers due to Analyzer applet. (BR 323635)
    * Fixed performance problem with large podcast feeds.
      Patch by Frank Meerkoetter <frank@meerkoetter.org>. (BR 283022)
    * Fixed issue with Amarok sometimes not finding its plugins after an upgrade.
